# voxel-engine

./: .gitignore  CREDITS.md  Cargo.toml  MEMORY.md  README.md  forfab.md  project.md
.cargo/: config.toml
docs/: STARTER.md
engine-core/: Cargo.toml
engine-core/src/: camera.rs  chunk.rs  lib.rs  mesh.rs  mob.rs  pathfind.rs  physics.rs  raycast.rs  registry.rs  streaming.rs  worldgen.rs
for-opus/: FOROPUS.md
game/: Cargo.toml
game/data/: blocks.json  items.json
game/src/: audio.rs  main.rs  save.rs  ui.rs
render-vk/: Cargo.toml
render-vk/shaders/: mesh.wgsl  ui.wgsl
render-vk/src/: atlas_textures.rs  lib.rs  shader.rs
